# renderer

./: CMakeLists.txt  README.md  gs-raster.h  imgui.ini  main.cpp
shaders/: quad.frag  shader.vert
src/: application.cpp  application.h  colmap_parser.cpp  colmap_parser.h  cuda_rasterizer.cu  cuda_rasterizer.h  cuda_rasterizer_host.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  splat_parser.cpp  splat_parser.h
src/camera/: camera.cpp  camera.h
src/cuda_rasterizer/: forward.cu  rasterizer_impl.cu
src/gaussian/: gaussian_parser.cpp  gaussian_parser.h  objects.h  renderer.cpp  renderer.h
src/gaussian_utils/: gaussian_utils.cpp  gaussian_utils.h
src/point_cloud/: colmap_parser.cpp  colmap_parser.h  objects.h  renderer.cpp  renderer.h
src/shaders/: fragment  shader.cpp  shader.h  vertex
src/shaders/gaussian/: fragment.glsl  vertex.glsl
src/temporal_gaussian/: renderer.cpp  renderer.h
